--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,11 @@ matrix:
     - os: linux
       sudo: required
       dist: trusty
+      env: CC_VER=4.8
+    - os: linux
+      sudo: required
+      dist: trusty
+      env: CC_VER=6.0
     - os: osx
       sudo: false
       osx_image: xcode7.3
